JumpScript/tests/baselines/reference/noCrashOnImportShadowing.errors.txt
tests/cases/compiler/index.jump(4,1): error TS2693: 'B' only refers to a type, but is being used as a value here.
tests/cases/compiler/index.jump(9,10): error TS2709: Cannot use namespace 'OriginalB' as a type.


==== tests/cases/compiler/b.jump (0 errors) ====
    export const zzz = 123;
    
==== tests/cases/compiler/a.jump (0 errors) ====
    import * as B from "./b";
    
    interface B {
        x: string;
    }
    
    const x: B = { x: "" };
    B.zzz;
    
    export { B };
    
==== tests/cases/compiler/index.jump (2 errors) ====
    import { B } from "./a";
    
    const x: B = { x: "" };
    B.zzz;
    ~
!!! error TS2693: 'B' only refers to a type, but is being used as a value here.
    
    import * as OriginalB from "./b";
    OriginalB.zzz;
    
    const y: OriginalB = x;
             ~~~~~~~~~
!!! error TS2709: Cannot use namespace 'OriginalB' as a type.